# kajiya

./: .gitignore  Cargo.toml  README.md
crates/lib/kajiya/: Cargo.toml
crates/lib/kajiya-asset/: Cargo.toml
crates/lib/kajiya-asset-pipe/: Cargo.toml
crates/lib/kajiya-backend/: Cargo.toml
crates/lib/kajiya-backend/src/: pipeline_cache.rs  rust_shader_compiler.rs  shader_compiler.rs
crates/lib/kajiya-backend/src/vulkan/: device.rs  swapchain.rs
crates/lib/kajiya-rg/: Cargo.toml
crates/lib/kajiya-rg/src/: graph.rs  hl.rs  renderer.rs
crates/lib/kajiya-simple/: Cargo.toml
crates/lib/kajiya-simple/src/: main_loop.rs
crates/lib/kajiya/src/: ui_renderer.rs  world_renderer.rs
crates/lib/rust-shaders/: Cargo.toml
crates/lib/rust-shaders-shared/: Cargo.toml
crates/lib/rust-shaders-shared/src/: util.rs
crates/lib/rust-shaders/src/: color.rs
