[package]
name = "kajiya-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya" }
kajiya-imgui = { path = "../kajiya-imgui", optional = true }

anyhow = "1.0"
glam = { version = "0.22.0", features = ["serde"] }
log = "0.4"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
winit = "0.25"

imgui = { version = "0.7", optional = true }

profiling = "1.0.8"

[features]
dear-imgui = [
    "imgui",
    "kajiya-imgui",
]
winit_serde = [
    "winit/serde",
]
profile-with-tracy = ["profiling/profile-with-tracy"]
default = ["profile-with-tracy"]