[package]
name = "rust-shaders-shared"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
macaw = { version = "0.18.2", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
glam = "0.22.0"

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = "0.7.0"
