[package]
name = "rust-shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]
test = false
doctest = false

[dependencies]
rust-shaders-shared = { path = "../rust-shaders-shared" }
spirv-std = "0.7.0"
macaw = { version = "0.18.2", default-features = false, features = ["libm"] }